plugins {
	id 'org.springframework.boot' version '2.4.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.1.6'
	id 'org.openapi.generator' version '5.0.0'
	id "org.sonarqube" version "3.1.1"
	id "jacoco"
}

group = 'eu.accesa'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.openapitools:openapi-generator-gradle-plugin:5.0.0'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation "io.springfox:springfox-boot-starter:3.0.0"
	implementation('org.modelmapper:modelmapper:2.3.0')
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	compile 'io.springfox:springfox-swagger-ui:3.0.0'
	annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
	compile 'org.mongodb:mongodb-driver-sync'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-test'
	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
}
configurations {
	compile.exclude group: 'org.slf4j', module: 'slf4j-simple'
	jacocoTestReport {
		reports {
			xml.enabled true
		}
	}
	test.finalizedBy jacocoTestReport
}
test {
	useJUnitPlatform()
}
